add the category files

--- a/crowdfunding_data.ipynb
+++ b/crowdfunding_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "469c4a55",
+   "id": "460e0097",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7d61269",
+   "id": "e4b529d3",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a2e58fe4",
+   "id": "9ace861a",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "68d86c3d",
+   "id": "eae27d7e",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c062b4f0",
+   "id": "751f1655",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fc6f9732",
+   "id": "ee582ef3",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7edce3ec",
+   "id": "32afb01f",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e73905b9",
+   "id": "d95f5e4b",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b0df75b3",
+   "id": "648c7aca",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ed34fa4e",
+   "id": "d24081f6",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bbd1f5c4",
+   "id": "3a16c284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b18d7045",
+   "id": "7084b5da",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8f6cb9c6",
+   "id": "f0d0bbf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "45b1778c",
+   "id": "7a4b9d75",
    "metadata": {},
    "outputs": [
     {
@@ -899,8 +899,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "7d25cfed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_df.to_csv('category.csv', encoding='utf-8',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
-   "id": "0b6a17c8",
+   "id": "fcc6e1f2",
    "metadata": {},
    "outputs": [
     {
@@ -1008,8 +1018,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "7c085a58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subcategory_df.to_csv('subcategory.csv', encoding='utf-8',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
-   "id": "ac804045",
+   "id": "9b8f7f91",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ba5e8756",
+   "id": "27ab767f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3edb54d1",
+   "id": "3124a76f",
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5c220a0c",
+   "id": "07c2efc5",
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ff0d19ac",
+   "id": "b47b3ac2",
    "metadata": {},
    "outputs": [
     {
@@ -1916,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c9d78a3e",
+   "id": "280cfd39",
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2104,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e517a6d9",
+   "id": "0d82afd2",
    "metadata": {},
    "outputs": [
     {
@@ -2158,7 +2178,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "767b8231",
+   "id": "16da180f",
    "metadata": {},
    "outputs": [
     {
@@ -3180,7 +3200,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f541f9a4",
+   "id": "076881a8",
    "metadata": {},
    "outputs": [
     {
@@ -3201,7 +3221,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "19775b0f",
+   "id": "cdad065f",
    "metadata": {},
    "outputs": [
     {
@@ -3220,7 +3240,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6549b459",
+   "id": "5389fd39",
    "metadata": {},
    "outputs": [
     {
@@ -3394,7 +3414,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5a2735b7",
+   "id": "29758b3f",
    "metadata": {},
    "outputs": [
     {
@@ -3432,7 +3452,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "746095b9",
+   "id": "31c3e51a",
    "metadata": {},
    "outputs": [
     {
@@ -3472,7 +3492,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d7391681",
+   "id": "1ac6f979",
    "metadata": {},
    "outputs": [
     {
@@ -3855,7 +3875,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "50ea3565",
+   "id": "425156c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3865,7 +3885,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5e221abc",
+   "id": "4e505379",
    "metadata": {},
    "outputs": [
     {
@@ -3953,7 +3973,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c807be67",
+   "id": "1b77c6ce",
    "metadata": {},
    "outputs": [
     {
@@ -3978,7 +3998,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e60f4ac4",
+   "id": "bc170b95",
    "metadata": {},
    "outputs": [
     {
@@ -4008,7 +4028,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c85b4ff4",
+   "id": "ddb2a952",
    "metadata": {},
    "outputs": [
     {
@@ -4095,7 +4115,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "895c7d6c",
+   "id": "1c80b3ea",
    "metadata": {},
    "outputs": [
     {
@@ -4122,7 +4142,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7660026c",
+   "id": "a373c89f",
    "metadata": {},
    "outputs": [
     {
@@ -4258,7 +4278,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "48225003",
+   "id": "d7e5c9e0",
    "metadata": {},
    "outputs": [
     {
@@ -4429,13 +4449,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d79fb43b",
+   "execution_count": 41,
+   "id": "f505a9e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "campaign_cleaned_order.to_csv('campaign.csv', encoding='utf-8',index=False)"
+    "contacts_df_clean_order.to_csv('contacts.csv', encoding='utf-8',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "67e74580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54a85418",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
